--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     html, body {
       width: 100%;
       min-height: 100vh;
-      background: #f2ebdd;
+      background: #ffffff;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -44,6 +44,7 @@
       flex-direction: column;
       justify-content: center;
       aspect-ratio: 3 / 2;
+      border-radius: 12px;
 
     }
 
@@ -52,6 +53,8 @@
   box-shadow: none;
   background: inherit;
   backdrop-filter: none;
+  border-radius: 12px;
+
 }
 
 
@@ -67,6 +70,8 @@
       justify-content: center;
       transition: transform 0.6s ease;
       z-index: 2;
+      border-radius: 12px;
+
     }
 
     .cover .seal {
@@ -81,6 +86,8 @@
       font-size: 1.8rem;
       box-shadow: inset 0 0 4px rgba(0,0,0,0.2);
       transition: box-shadow 0.3s ease;
+      border-radius: 12px;
+
     }
 
     .cover .seal:hover {
@@ -107,6 +114,8 @@
       z-index: 1;
       overflow-wrap: break-word;
       word-break: break-word;
+      border-radius: 12px;
+
     }
 
     .card.open .paper {
