Update birthday card animation

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 <body>
   <div class="card" id="card">
-    <div class="cover"><div class="seal">💝</div></div>
+    <div class="cover"><div class="seal">❤</div></div>
     <div class="paper">
       <div class="title">HAPPY BIRTHDAY!</div>
       <div class="name">Phạm Thị Thu Nguyệt</div>
